[package]
name = "donut"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.25.0"
lazy_static = "1.4"
phf = { version = "0.11.1", features = ["phf_macros", "macros"] }
pretty_assertions = "1.3.0"
tui = "0.19.0"
unicode-width = "0.1.10"
